# LinearRegression

./: 10Year_U.S._Treasury_Yield.csv  CMakeLists.txt  LinearRegression.cpp  LinearRegression.h  README.md  README_CUDA.md  README_LinearRegression.md  README_Regularization.md  README_data.md  Regularization.cpp  Regularization.h  SOX.csv  SPX.csv  data.cpp  data.h  example.md  main.cpp  utils.cu  utils.cuh
dataset/: Dow_Jones.csv  MSCI.csv  Morgan_bond.csv  NASDAQ.csv  usd_twd.csv
